# box_packing

./: .env.secret  .gitignore  README.md  app.wsgi  box_packing.conf  box_relations.ipynb  boxes.py  config.py  deploy.sh  models.py  moving.db  pyproject.toml  requirements.txt  wsgi.py
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
box_packing/: __init__.py  app.py  box_manager.py  box_relations.ipynb  boxes.py  create_db.sql  form.py  models.py  moving.db  old_app.py  reset_db.sql  routes.py  test_boxes.py
box_packing/static/css/: styling.css  styling.css.map  styling.scss
box_packing/static/sql/: create_db.sql
box_packing/templates/: index.html  search.html
deploy/: README.md  gunicorn.conf  nginx.conf  supervisor.conf
