[tool.poetry]
name = "box_packing"
version = "0.1.0"
description = "Packing Boxes for Temp Moving"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
